# cognito-rs

./: .env.sample  .gitignore  Cargo.toml  README.md
.run/: Backend.run.xml  Both.run.xml  Frontend.run.xml
backend/: Cargo.toml
backend/src/: auth.rs  error.rs  handler.rs  main.rs  state.rs
frontend/: package.json  vite.config.ts
frontend/src/: App.vue  auth.ts  main.ts  router.ts
frontend/src/pages/: HomeView.vue  SignInCallbackView.vue  SignOutCallbackView.vue
frontend/src/stores/: userStore.ts
