[workspace]
members = ["backend"]
resolver = "3"

[workspace.package]
authors = ["PotatoMaster101"]
edition = "2024"
license = "GPL-3.0-or-later"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.8" }
axum-server = { features = ["tls-rustls"], version = "0.8" }
dotenvy = { version = "0.15" }
jsonwebtokens-cognito = { version = "0.1" }
serde_json = { version = "1.0" }
shellexpand = { version = "3.1" }
thiserror = { version = "2.0" }
tokio = { features = ["full"], version = "1.49" }
tower = { features = ["util"], version = "0.5" }
tower-http = { features = ["compression-full", "cors", "fs", "trace"], version = "0.6" }
tracing = { version = "0.1" }
tracing-subscriber = { features = ["env-filter"], version = "0.3" }
